2001-03-22  Pavel Cisler  <pavel@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	* modules/file-method.c: (get_stat_info):
	Fix a bug that caused symlink_name to never be read.
	Add support for retrieving the symlink_name for a multi-level
	symlink.

2001-03-17  Gene Z. Ragan  <gzr@eazel.com>

	* modules/Makefile.am:
	I am clueless. Maybe adding this header file
	to the list of files in the cdda module listing
	will fix the build.
	
2001-03-17  Gene Z. Ragan  <gzr@eazel.com>

	* modules/Makefile.am:
	Another attempt to fix tinderbox.

2001-03-16  Gene Z. Ragan  <gzr@eazel.com>

	* configure.in:
	Another try to get this right. Check for the presence of the
	cdparanoia headers instead of the library. The use of an
	underscore in the library name seems to confuse the AM_CHECK_LIB
	macro.

2001-03-15  Gene Z. Ragan  <gzr@eazel.com>

	* configure.in:
	Fix tinderbox breakage. This is what happens when I pretend to be a build
	engineer.
	
	* modules/cdda-method.c: (do_open), (do_close), (do_get_file_info),
	(do_close_directory):
	Removed some debug messages.
	
2001-03-15  Gene Z. Ragan  <gzr@eazel.com>

	* modules/cdda-cddb.c:
	Added a workaround for the strangely defined, but unused,
	static arrays of chars in cdparanoia headers that causes
	a compiler error due to our strict error checking.
	
2001-03-15  Gene Z. Ragan  <gzr@eazel.com>

	* modules/cdda-module.conf:
	Add new cdda configuration file to build.

2001-03-15  Gene Z. Ragan  <gzr@eazel.com>

	* configure.in:
	* modules/Makefile.am:
	* modules/cdda-cddb.c:
	* modules/cdda-method.c: (cdda_context_new):
	* modules/default-modules.conf:
	Add cdda module to build using configure conditionals that depend
	on the presence of libcdparanoia.
	
2001-03-15  John Sullivan  <sullivan@eazel.com>

	reviewed by: Darin Adler <darin@eazel.com>

	* libgnomevfs/gnome-vfs-types.h: Reverted this part of
	my eralier checkin after Darin convinced me that the
	change I made here could actually make things worse.